Updated project proposal

--- a/website-design/proposal.html
+++ b/website-design/proposal.html
@@ -31,6 +31,12 @@
         h3 {
             font-family: Arial, Helvetica, sans-serif;
         }
+        
+        #sketch {
+            transform: rotate(270deg);
+            padding-left: 20%;
+            padding-top: 5%;
+        }
     </style>
 </head>
 
@@ -66,6 +72,12 @@
         of renting clothing and making smarter shopping decisions since a lot of the clothing that people buy they never end up wearing and it either sits in their drawers or ends up being through away. I think it would be cool to have a community-based
         page that allows visitors to the website to share their own outfits and share their stories and ideas with other people to include more of an interactive component to the website so that people, besides me, can inspire others to join in as well.
     </p>
+    <p>
+        <h2>Website Planning</h2>
+        <h4>Homepage Sketch:</h4>
+        <img id="sketch" src="web-homepagesketch.jpg" alt="sketch" width="70%" />
+        <h4>Sitemap:</h4>
+        <img src="web-sitemap.jpg" alt="sitemap" width="90%"></p>
 </body>
 
 </html>
