--- a/industry.html
+++ b/industry.html
@@ -15,8 +15,9 @@
         }
         
         h2 {
-            text-align: center;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            text-align: center;
+            background-color: darkcyan;
         }
         
         body {
